Fixed spacing issue where account page covered the nav on smaller displays

--- a/src/pages/css/Account.css
+++ b/src/pages/css/Account.css
@@ -166,6 +166,7 @@ form {
 
 @media (max-width: 820px) {
   .account-container {
+    margin-top: 100px;
     padding: 50px 10px;
   }
 
